--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           no tiene calorías.
         </p>
       </div>
-      <img src="assets/bebiendo.jpg" width="500">
+      <img src="assets/Bebiendo.jpg" width="500">
     </section>
     
     <section id="pasta-dental">
